<resources>
    <string name="app_name">"Beyond News "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="headline">HeadLine</string>
    <string name="entertainment">Entertainment</string>
    <string name="sport">Sport</string>
    <string name="local">Local</string>
    <string name="setting">Setting</string>
    <string name="building">Building on progress...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_headline_fragment">Hello Headline fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="review">Review</string>
    <string name="review_hint">Review here</string>
</resources>
