<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_headline"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/headline" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/entertainment" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/sport" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/local" />
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
